--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MessageBoard",
+  "name": "message-board",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,20 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Eddie Zaneski",
+  "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "socket.io": "^2.1.1",
-    "webpack": "^4.17.1",
-    "webpack-dev-middleware": "^3.2.0"
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "socket.io": "^1.4.5",
+    "webpack": "^1.13.0",
+    "webpack-dev-middleware": "^1.6.1"
   }
 }
